//Define the used version of proto
syntax = "proto3";

package aqpredictions;

//Define a message to hold the features input by the client
message AQPredictRequest {
    float e6_tiller_pm25 = 1 ;
    float e6_tiller_pm10 = 2 ;
    float elgeseter_pm25 = 3 ;
    float elgeseter_pm10 = 4 ;
    float torvet_pm25 = 5 ;
    float torvet_pm10 = 6 ;
}
//Define a message to hold the response output
message AQPredictResponse {
    string predicted_aq_level = 1 ;
}


//Define the service
service AI4IoT {
  rpc predict_aq_level(AQPredictRequest) returns (AQPredictResponse);
}